# elara

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
moon/inc/: motor.h
moon/sources/: main.c
sources/: controllers.c  controllers.h  main.c  motor.c  pid.c  pid.h  solver.c
sun/inc/: clay_renderer_raylib.c  controllers.h  solver.h
sun/sources/: controllers.c  main.c
